--- a/index.html
+++ b/index.html
@@ -344,13 +344,13 @@
 
         // --- CONFIGURAÇÃO E ESTADO INICIAL ---
         const firebaseConfig = {
-          apiKey: "AIzaSyC59KHuHiOKJa4gmbeCiQWJygqqUkkcdyU",
-          authDomain: "krominski-hub.firebaseapp.com",
-          projectId: "krominski-hub",
-          storageBucket: "krominski-hub.firebasestorage.app",
-          messagingSenderId: "447462209767",
-          appId: "1:447462209767:web:caea1783c6f5fae853ca42",
-          measurementId: "G-FZXEW9F9BG"
+        apiKey: "__FIREBASE_API_KEY__",
+        authDomain: "__FIREBASE_AUTH_DOMAIN__",
+        projectId: "__FIREBASE_PROJECT_ID__",
+        storageBucket: "__FIREBASE_STORAGE_BUCKET__",
+        messagingSenderId: "__FIREBASE_MESSAGING_SENDER_ID__",
+        appId: "__FIREBASE_APP_ID__",
+        measurementId: "__FIREBASE_MEASUREMENT_ID__"
         };
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
